# TDP1-Portal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Editor  Makefile  Portal  Portal.cbp  README.md  Test  cmake_install.cmake  draft servidor.md  file.yaml  install.sh
Box2D/: Box2D-cmake.cbp  Makefile  cmake_install.cmake
client/: AcidView.cpp  AcidView.h  AnimatedSprite.cpp  AnimatedSprite.h  AudioSystem.cpp  AudioSystem.h  BluePortalView.cpp  BluePortalView.h  BulletView.cpp  BulletView.h  ButtonView.cpp  ButtonView.h  CakeView.cpp  CakeView.h  Camera.cpp  Camera.h  ChellView.cpp  ChellView.h  CloseException.h  Drawer.cpp  Drawer.h  EnergyBallView.cpp  EnergyBallView.h  EventSender.cpp  EventSender.h  Game.cpp  Game.h  GameNameMenu.cpp  GameNameMenu.h  GateView.cpp  GateView.h  InitialMenu.cpp  InitialMenu.h  LevelMenu.cpp  LevelMenu.h  LevelOption.cpp  LevelOption.h  OrangePortalView.h  PortalView.cpp  PortalView.h  (+26 more)
client/audio/: AudioSystem.h  SoundCodeQueue.cpp  SoundCodeQueue.h
client/communication-support/: EventSender.cpp  EventSender.h  StageStatusReceiver.cpp  StageStatusReceiver.h  UserEventHandler.cpp  UserEventHandler.h
client/views/: AcidView.cpp  AcidView.h  BluePortalView.cpp  BluePortalView.h  BulletView.cpp  BulletView.h  ButtonView.cpp  ButtonView.h  CakeView.cpp  CakeView.h  Camera.cpp  ChellView.cpp  ChellView.h  EnergyBallView.cpp  EnergyBallView.h  EnergyBarView.cpp  EnergyBarView.h  GateView.cpp  GateView.h  OrangePortalView.cpp  OrangePortalView.h  Pintool.cpp  Pintool.h  ReceptorDownView.cpp  ReceptorDownView.h  ReceptorLeftView.cpp  ReceptorLeftView.h  ReceptorRightView.cpp  ReceptorRightView.h  ReceptorUpView.cpp  ReceptorUpView.h  RockView.cpp  RockView.h  StageView.cpp  StageView.h  View.cpp  View.h  ViewFactory.cpp  ViewFactory.h  ViewManager.cpp  (+1 more)
common/: AnimatedSprite.cpp  AnimatedSprite.h  InputText.cpp  InputText.h  OutputText.cpp  OutputText.h  Protocol.cpp  Protocol.h  SDLSession.cpp  SDLSession.h  Socket.cpp  Socket.h  Sprite.cpp  Sprite.h  StageStatusQueue.cpp  StageStatusQueue.h  StageView.cpp  StageView.h  Text.cpp  Text.h  TextOut.cpp  TextOut.h  Thread.cpp  Thread.h  UserEvent.cpp  UserEvent.h  UserEventQueue.cpp  UserEventQueue.h  Window.cpp  Window.h  constants.h
config/: client_config.yaml  server_config.yaml  sounds.yaml  textures.yaml
editor/: AnimatedObject.cpp  AnimatedObject.h  Block.cpp  Block.h  BrickBlock.h  BrickBlockContainer.cpp  BrickBlockContainer.h  BrickBlockImage.cpp  BrickBlockImage.h  BrickBlockImageContainer.cpp  BrickBlockImageContainer.h  Button.cpp  Button.h  Chell.cpp  Chell.h  Editor.cpp  Editor.h  EditorStageView.cpp  EditorStageView.h  Event.cpp  Event.h  Gate.cpp  Gate.h  HomeScreen.cpp  HomeScreen.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h  MetalBlockButton.cpp  MetalBlockButton.h  MetalBlockImage.cpp  MetalBlockImage.h  MouseButton.cpp  MouseButton.h  MouseButtonDown.cpp  MouseButtonDown.h  MouseButtonUp.cpp  (+26 more)
editor/stage/: AnimatedObject.h  Block.h  Button.h  Cake.h  Chell.cpp  Controller.cpp  Controller.h  InputManager.cpp  InputManager.h  LogicGates.cpp  LogicGates.h  Object.h  Rock.cpp  Rock.h  Stage.cpp  Stage.h  StageController.cpp  StageController.h  StageObjectException.h  StageView.cpp  StageView.h  StaticObject.cpp  StaticObject.h  View.cpp  View.h  YamlManager.cpp  YamlManager.h
ffmpeg/: BlockingQueue.cpp  BlockingQueue.h  CodecContext.cpp  CodecContext.h  Consumer.cpp  Consumer.h  FfmpegWrapper.cpp  FfmpegWrapper.h  FormatContext.cpp  FormatContext.h  FormatOutput.cpp  FormatOutput.h  Frame.cpp  Frame.h  Output.cpp  Output.h  Packet.cpp  Packet.h  SwsContext.cpp  SwsContext.h  Thread.cpp  Thread.h  example.md
inform/: .gitignore  proyect-manual.aux  proyect-manual.out  proyect-manual.tex  technique-doc.aux  technique-doc.out  technique-doc.tex  user-manual.aux  user-manual.out  user-manual.tex
levels/: FinalDestination.yaml  LateToTheParty.yaml  diagonalBalls.yaml  diagonals.yaml  energyreceptors.yaml  receptorAndButton.yaml  receptorGate.yaml  simple.yaml  stage1.yaml  stageOne.yaml  stageTwo.yaml
server/: .gitignore  Acid.cpp  Acid.h  BluePortal.cpp  BluePortal.h  BlueShot.cpp  BlueShot.h  BrickBlock.cpp  BrickBlock.h  Button.cpp  Button.h  Cake.cpp  Chell.cpp  Chell.h  ClientHandler.cpp  ClientHandler.h  ClientReceiver.cpp  ClientSender.cpp  ConfigurationParser.cpp  ConfigurationParser.h  Coordinate.cpp  Coordinate.h  Coordinates.cpp  Coordinates.h  DiagonalMetalBlock.cpp  DiagonalMetalBlock.h  Dynamic.cpp  Dynamic.h  EnergyBall.cpp  EnergyBall.h  EnergyBallHorizontal.cpp  EnergyBallHorizontal.h  EnergyBallVertical.cpp  EnergyBallVertical.h  EnergyBar.cpp  EnergyBar.h  EnergyReceptor.cpp  EnergyReceptor.h  EnergyReceptorDown.cpp  EnergyReceptorDown.h  (+65 more)
server/communication-support/: ClientHandler.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  RoomAcceptor.cpp  RoomAcceptor.h  RoomManager.cpp  RoomManager.h  RoomWorker.cpp  RoomWorker.h  Server.cpp  Server.h  StageManager.cpp  StageManager.h
server/config/: config.yaml  configuration.cpp  configuration.h
server/entities/: Acid.cpp  Acid.h  BlueShot.cpp  BlueShot.h  Button.cpp  Button.h  Cake.cpp  Cake.h  Chell.cpp  Chell.h  DiagonalMetalBlock.cpp  DiagonalMetalBlock.h  EnergyBall.cpp  EnergyBall.h  EnergyBar.cpp  EnergyBar.h  EnergyReceptor.cpp  EnergyReceptor.h  EnergyReceptorDown.cpp  EnergyReceptorDown.h  EnergyReceptorLeft.cpp  EnergyReceptorLeft.h  EnergyReceptorRight.cpp  EnergyReceptorRight.h  EnergyReceptorUp.cpp  EnergyReceptorUp.h  EnergyTransmitter.cpp  EnergyTransmitter.h  EnergyTransmitterDown.cpp  EnergyTransmitterDown.h  EnergyTransmitterLeft.cpp  EnergyTransmitterLeft.h  EnergyTransmitterRight.cpp  EnergyTransmitterRight.h  EnergyTransmitterUp.cpp  EnergyTransmitterUp.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  (+18 more)
server/movements/: Dynamic.cpp  Dynamic.h  MoveLeft.cpp  MoveLeft.h  MoveRight.cpp  MoveRight.h  Stop.cpp  Stop.h
server/portal-support/: BluePortal.cpp  BluePortal.h  (+5 more)
tests/: MyTestSuite.h  README  README.md  main  tests.cpp
(+70 files in other folders)
